--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <p class="section__text__p1">Hello, I'm</p>
       <h1 class="title">Nakul Patel</h1>
       <div class="context-text">
-        <p class="section__text__p2">I'm A <a href="" class="typewrite" data-period="2000" data-type='["Software Developer", "Data Scientist", "ML Engineer"]' style="text-decoration: none;"></a></p>
+        <p class="section__text__p2">I'm A <a href="" class="typewrite" data-period="2000" data-type='["Software Developer", "ML Engineer", "Data Scientist"]' style="text-decoration: none;"></a></p>
       </div>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/nakul-patel-software-resume.pdf')">
@@ -61,9 +61,9 @@
       </div>
       <!-- social media icons for linkedin and github -->
       <div id="socials-container">
-        <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
+        <img src="./assets/linkedin.png" alt="My LinkedIn Profile" class="icon"
           onclick="location.href='https://www.linkedin.com/in/nakulpatel0306/'" />
-        <img src="./assets/github.png" alt="My Github profile" class="icon"
+        <img src="./assets/github.png" alt="My Github Profile" class="icon"
           onclick="location.href='https://github.com/nakulpatel0306'" />
       </div>
     </div>
@@ -78,7 +78,7 @@
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience Icon" class="icon" />
             <h3>Experience</h3>
-            <p>3+ Years <br />Software Development</p>
+            <p>5+ Years <br />Software Development</p>
           </div>
           <div class="details-container">
             <img src="./assets/education.png" alt="Education Icon" class="icon" />
@@ -93,7 +93,6 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#experience'" />
   </section>
   <!-- experience section showcasing professional timeline -->
   <section id="experience">
@@ -105,23 +104,23 @@
         <ul>
           <li>
             <div class="timeline-content">
+              <h3 class="date">Sep 2025 - Dec 2025</h3>
+              <h1>Multiverse Computing</h1>
+              <p>Machine Learning Engineer, Internship</p>
+            </div>
+          </li>
+          <li>
+            <div class="timeline-content">
               <h3 class="date">Jan 2025 - Apr 2025</h3>
               <h1>Definity Financial Corp</h1>
-              <p>QA Automation Engineer, Internship</p>
+              <p>Automation Engineer, Internship</p>
             </div>
           </li>
           <li>
             <div class="timeline-content">
               <h3 class="date">May 2024 - Aug 2024</h3>
               <h1>Stouffville Chamber Of Commerce</h1>
-              <p>Data Analyst / Outreach Representative, Internship</p>
-            </div>
-          </li>
-          <li>
-            <div class="timeline-content">
-              <h3 class="date">May 2023 - Apr 2024</h3>
-              <h1>RIZE Sports Event Management</h1>
-              <p>Co-President / Executive Board Member, Startup</p>
+              <p>Data Analyst, Internship</p>
             </div>
           </li>
           <li>
@@ -141,7 +140,6 @@
         </ul>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#projects'" />
   </section>
   <!-- projects section with details and links to projects -->
   <section id="projects">
@@ -193,7 +191,6 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='#contact'" />
   </section>
   <!-- contact section with email and LinkedIn profile link -->
   <section id="contact">
@@ -202,11 +199,11 @@
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" alt="Email Icon" class="icon contact-icon email-icon" />
-        <p><a href="mailto:pate1079@mylaurier.ca">pate1079@mylaurier.ca</a></p>
+        <p><a href="mailto:nakul0306@gmail.com">nakul0306@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
         <img src="./assets/linkedin.png" alt="LinkedIn Icon" class="icon contact-icon" />
-        <p><a href="https://www.linkedin.com/in/nakulpatel0306/">LinkedIn</a></p>
+        <p><a href="https://www.linkedin.com/in/nakulpatel0306/">linkedin.com/in/nakulpatel0306</a></p>
       </div>
     </div>
   </section>
