project images changed

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
       <div class="about-containers">
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project/project-4.png" alt="Evo - Genetric Algorithm Viz" class="project-img" />
+            <img src="./assets/project/project-4.jpg" alt="Evo - Genetric Algorithm Viz" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Evo - Genetic Algortihm Viz</h2>
           <div class="btn-container">
@@ -249,7 +249,7 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project/project-5.jpeg" alt="King Me - Checkers Edition" class="project-img" />
+            <img src="./assets/project/project-5.jpg" alt="King Me - Checkers Edition" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">King Me - Checkers Edition</h2>
           <div class="btn-container">
@@ -263,7 +263,7 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project/project-6.jpeg" alt="Type Racer - Typing Speed Test" class="project-img"/>
+            <img src="./assets/project/project-6.gif" alt="Type Racer - Typing Speed Test" class="project-img"/>
           </div>
           <h2 class="experience-sub-title project-title">Click - Typing Speed Game</h2>
           <div class="btn-container">
