changed about me images

--- a/index.html
+++ b/index.html
@@ -114,13 +114,10 @@
           <li class="ac-slide"><img src="./assets/about/about-1.jpg" alt="Cousins And Friends - Garba" loading="lazy"></li>
           <li class="ac-slide"><img src="./assets/about/about-2.jpg" alt="Waterloo Friends - Blue Mountain" loading="lazy"></li>
           <li class="ac-slide"><img src="./assets/about/about-3.jpg" alt="High School - Alex And Ryan" loading="lazy"></li>
-          <li class="ac-slide"><img src="./assets/about/about-7.jpg" alt="Me And Jenish - Blue Mountain" loading="lazy"></li>
-          <li class="ac-slide"><img src="./assets/about/about-9.jpg" alt="Waterloo Freinds - Dhara's Birthday" loading="lazy"></li>
-          <li class="ac-slide"><img src="./assets/about/about-10.jpg" alt="Cousins - CN Tower" loading="lazy"></li>
-          <li class="ac-slide"><img src="./assets/about/about-11.jpg" alt="Cousins - HOCO" loading="lazy"></li>
           <li class="ac-slide"><img src="./assets/about/about-12.jpg" alt="Waterloo Friends - Intramural Champions" loading="lazy"></li>
           <li class="ac-slide"><img src="./assets/about/about-13.jpg" alt="Cousins - Escape Room" loading="lazy"></li>
           <li class="ac-slide"><img src="./assets/about/about-14.jpg" alt="Brothers - Punta Cana" loading="lazy"></li>
+          <li class="ac-slide"><img src="./assets/about/about-15.jpg" alt="Me And Kajan - 21 Columbia Street" loading="lazy"></li>
         </ul>
       </div>
 
