feat(): add new project showcase and update project assets

--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project/project-2.png" alt="Paw'D - Doggy Care App" class="project-img" />
+            <img src="./assets/project/project-2.png" alt="Echo - Spotify Stats App" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Paw'D - Doggy Care App</h2>
+          <h2 class="experience-sub-title project-title">Echo - Spotify Stats App</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/nakulpatel0306'">
               Github
@@ -216,9 +216,9 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project/project-3.jpg" alt="Court Vision - NBA Match Predictor" class="project-img"/>
+            <img src="./assets/project/project-3.jpg" alt="Swish - NBA Game Predictor" class="project-img"/>
           </div>
-          <h2 class="experience-sub-title project-title">Swish - NBA Match Predictor</h2>
+          <h2 class="experience-sub-title project-title">Swish - NBA Game Predictor</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/nakulpatel0306'">
               Github
